# OgmaNeoDemos

./: .gitignore  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  OGMANEODEMOS_LICENSE.md  README.md
.travis/: install_cmake.sh  install_deps.sh  install_opencl.sh  install_opencv.sh  install_sfml.sh
CMake/: FindBOX2D.cmake  FindOgmaNeo.cmake
demos/: Ball_Physics.cpp  Car_Racing.cpp  Car_Test.cpp  Cat_Mouse.cpp  Cat_Mouse_Torch.cpp  Evo.cpp  FB_Parser.cpp  Generative.cpp  Grid_Cells.cpp  Invariance.cpp  Level_Gen.cpp  MNIST_Anomaly_Detection.cpp  NaviGraph.cpp  Pusher.cpp  Reacher.cpp  RunnerMain.cpp  Runner_Run.cpp  STDP.cpp  SequenceRecall.cpp  Swarm_Test.cpp  Video_Prediction.cpp  Visual_Math.cpp  Wavy_Classify.cpp  Wavy_Line.cpp  Wavy_Test.cpp  mnist.h
demos/catmouse/: CatMouseEnv.cpp  CatMouseEnv.h
demos/constructs/: Matrix3x3f.cpp  Matrix3x3f.h  Matrix4x4f.cpp  Matrix4x4f.h  Quaternion.cpp  Quaternion.h  Vec2f.cpp  Vec2f.h  Vec3f.cpp  Vec3f.h  Vec4f.cpp  Vec4f.h
demos/evo/: CPPN.cpp  CPPN.h  Lattice.cpp  Lattice.h  Unit.cpp  Unit.h
demos/generative/: Layer.cpp  Layer.h
demos/navigraph/: Graph.cpp  Graph.h
demos/runner/: Runner.cpp  Runner.h
demos/swarm/: Swarm.cpp  Swarm.h
demos/util/: Math.h
demos/vis/: DebugWindow.cpp  DebugWindow.h  NeoVis.cpp  NeoVis.h  Plot.cpp  Plot.h  Plot.hpp  Vis3D.cpp  Vis3D.h  guiControl_sfml.hpp
resources/: Tesseract.wmv  training_camdataDetrend.txt
